# leptos-cloudflare-example

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
locales/: languages.json
locales/en/: main.ftl
locales/zh-CN/: main.ftl
src/: api.rs  app.rs  lib.rs
src/components/: app_sidebar.rs  fallback.rs  icon.rs  icons.rs  layout.rs  loading.rs  mod.rs  password_input.rs
src/components/ui/: avatar.rs  button.rs  card.rs  mod.rs  nav.rs  sidebar.rs  skeleton.rs  typography.rs
src/pages/: home.rs  mod.rs  root_layout.rs  shell.rs  stories.rs
src/pages/auth/: login.rs  signup.rs
src/pages/errors/: maintenance.rs  mod.rs  not_found.rs  server.rs  unauthorised.rs
src/providers/: config.rs  mod.rs  sidebar.rs
style/: index.css
